[package]
name = "econagent-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "econagent_simulation"
path = "src/lib.rs"

[[bin]]
name = "econagent"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.5", features = ["derive"] }

# social-simulation framework (socsim) — ABM のエンジン基盤．EconAgent は
# 市場仲介の非空間マクロ経済モデルなので core + engine に加え，LLM 駆動の個体
# 意思決定のため LLM ヘルパ層 socsim-llm を取り込む (空間格子なし → socsim-grid
# 不要; 市場仲介 → socsim-net も既定不要)．socsim-llm の "live" feature が ollama
# + openai 両バックエンド (FallbackClient) を有効化する (issue #21)．reqwest は
# 使わない (socsim-llm が HTTP を所有する)．具体的 commit は Cargo.lock で固定．
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-llm    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-llm", features = ["live"] }
# 出力ヘルパ (timestamp / run-dir / latest symlink / CSV・JSON writer)．
# ライブラリモードのボイラープレートを集約した共有クレット．
socsim-results = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-results" }
