[project]
name = "econagent-tools"
version = "0.1.0"
description = "Li et al. (2024) EconAgent LLM-agent macroeconomic simulation — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "socsim-tools",
]

[project.scripts]
econagent-tools = "econagent_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econagent_tools"]
